var searchData=
[
  ['c_5fname',['c_name',['../struct__ProtobufCEnumValue.html#a91c73d60b5effaac5e74b87e37809a38',1,'_ProtobufCEnumValue::c_name()'],['../struct__ProtobufCEnumDescriptor.html#a91c73d60b5effaac5e74b87e37809a38',1,'_ProtobufCEnumDescriptor::c_name()'],['../struct__ProtobufCMessageDescriptor.html#a91c73d60b5effaac5e74b87e37809a38',1,'_ProtobufCMessageDescriptor::c_name()'],['../struct__ProtobufCServiceDescriptor.html#a91c73d60b5effaac5e74b87e37809a38',1,'_ProtobufCServiceDescriptor::c_name()']]],
  ['callback',['callback',['../structgg__common.html#a5c1f922f03980124155c6994322f9bd0',1,'gg_common::callback()'],['../structgg__session.html#a425003ac8a7de0de5b2f815266b6884e',1,'gg_session::callback()'],['../structgg__http.html#a27a88187b1cd042605a1b9290511e20a',1,'gg_http::callback()'],['../structgg__dcc.html#a0b8090ef09e1572a37219cbe8a5c4821',1,'gg_dcc::callback()'],['../structgg__dcc7.html#a032e6d5a408cc0ef6c0f951fe9650863',1,'gg_dcc7::callback()']]],
  ['cb_5fdata',['cb_data',['../structgg__socket__manager__t.html#ada279f074950fb014cef38e570675771',1,'gg_socket_manager_t']]],
  ['changelog_2edox',['changelog.dox',['../changelog_8dox.html',1,'']]],
  ['chat_5fcreated',['chat_created',['../uniongg__event__union.html#ae9932382857e4dcf0014180c5d0fd7d8',1,'gg_event_union']]],
  ['chat_5fid',['chat_id',['../structgg__event__msg.html#a0615e830bea06f5c53cbbb394fb965a7',1,'gg_event_msg::chat_id()'],['../struct__GG110RecvMessage.html#a0615e830bea06f5c53cbbb394fb965a7',1,'_GG110RecvMessage::chat_id()'],['../struct__GG110SendMessage.html#a0615e830bea06f5c53cbbb394fb965a7',1,'_GG110SendMessage::chat_id()'],['../struct__GG110ChatInfoUpdate.html#a0615e830bea06f5c53cbbb394fb965a7',1,'_GG110ChatInfoUpdate::chat_id()']]],
  ['chat_5finfo',['chat_info',['../uniongg__event__union.html#af18d112305fb914aaa4b98bbbf911b7b',1,'gg_event_union']]],
  ['chat_5finfo_5fupdate',['chat_info_update',['../uniongg__event__union.html#a29d4dc1d474384aff5e06140fbf5a92a',1,'gg_event_union']]],
  ['chat_5finvite_5fack',['chat_invite_ack',['../uniongg__event__union.html#af393248d15c72217820495f800d61caf',1,'gg_event_union']]],
  ['chat_5flist',['chat_list',['../structgg__session__private.html#a495600bea8f2fa8981f0ea6ed2dd1c22',1,'gg_session_private']]],
  ['check',['check',['../structgg__common.html#a5aa1731610537e057191db627c19f1ca',1,'gg_common::check()'],['../structgg__session.html#a5aa1731610537e057191db627c19f1ca',1,'gg_session::check()'],['../structgg__http.html#a5aa1731610537e057191db627c19f1ca',1,'gg_http::check()'],['../structgg__dcc.html#a5aa1731610537e057191db627c19f1ca',1,'gg_dcc::check()'],['../structgg__dcc7.html#a5aa1731610537e057191db627c19f1ca',1,'gg_dcc7::check()']]],
  ['check_5fafter_5fqueue',['check_after_queue',['../structgg__session__private.html#a3f33f6b4f0994b2a292fdc2b622e173c',1,'gg_session_private']]],
  ['chunk_5fbuf',['chunk_buf',['../structgg__dcc.html#aed58c8b1e90c02338036a35e2fcd6fed',1,'gg_dcc']]],
  ['chunk_5foffset',['chunk_offset',['../structgg__dcc.html#a612d8496bc742a7d34ac3c99f60cd2a1',1,'gg_dcc']]],
  ['chunk_5fsize',['chunk_size',['../structgg__dcc.html#a1d78a9ed76f7aa9f671d5e72bae797eb',1,'gg_dcc']]],
  ['cid',['cid',['../structgg__dcc7.html#acf1eb702afc0e2995f8436eab9946482',1,'gg_dcc7']]],
  ['clear_5fremaining_5fn_5fptrs',['CLEAR_REMAINING_N_PTRS',['../protobuf-c_8c.html#a834fd2a4f672879deac8aaa222ef5def',1,'protobuf-c.c']]],
  ['client',['client',['../struct__GG105Login.html#a9a07d92f0eb56a4db24f14d21be5923b',1,'_GG105Login']]],
  ['client_5faddr',['client_addr',['../structgg__session.html#afe8103a5a3168019d3be70abe5a3c542',1,'gg_session::client_addr()'],['../structgg__login__params.html#afe8103a5a3168019d3be70abe5a3c542',1,'gg_login_params::client_addr()']]],
  ['client_5fport',['client_port',['../structgg__session.html#a227d901bc6fb3e4ed6ad9640054c7849',1,'gg_session::client_port()'],['../structgg__login__params.html#a227d901bc6fb3e4ed6ad9640054c7849',1,'gg_login_params::client_port()']]],
  ['client_5fversion',['client_version',['../structgg__session.html#a57e529d03f7681e4cc1299ac53ed5742',1,'gg_session::client_version()'],['../structgg__login__params.html#a57e529d03f7681e4cc1299ac53ed5742',1,'gg_login_params::client_version()']]],
  ['close_5fcb',['close_cb',['../structgg__socket__manager__t.html#a3490e85617d114b00e26a9a003bedc26',1,'gg_socket_manager_t']]],
  ['common_2ec',['common.c',['../common_8c.html',1,'']]],
  ['compatibility',['compatibility',['../structgg__session__private.html#a754d07e8abd4985de1452ea8c230f8fa',1,'gg_session_private::compatibility()'],['../structgg__login__params.html#a754d07e8abd4985de1452ea8c230f8fa',1,'gg_login_params::compatibility()']]],
  ['conn_5fid',['conn_id',['../structgg__multilogon__info__item.html#a14a1905baaeb3d4b33a2e8c9c3f939f3',1,'gg_multilogon_info_item::conn_id()'],['../structgg__multilogon__disconnect.html#a14a1905baaeb3d4b33a2e8c9c3f939f3',1,'gg_multilogon_disconnect::conn_id()']]],
  ['connect_5fcb',['connect_cb',['../structgg__socket__manager__t.html#a536336289e0502ed800319c0ed0d2fbe',1,'gg_socket_manager_t']]],
  ['connect_5fhost',['connect_host',['../structgg__session.html#a85989c75586784c3ccb9e6bd6996c8eb',1,'gg_session::connect_host()'],['../structgg__login__params.html#a85989c75586784c3ccb9e6bd6996c8eb',1,'gg_login_params::connect_host()']]],
  ['connect_5findex',['connect_index',['../structgg__session.html#ae38eca27ceaf5347d01384cb8a016dc7',1,'gg_session']]],
  ['connect_5fport',['connect_port',['../structgg__session.html#a5dbd36b54cc2e191a5268134a30972c0',1,'gg_session']]],
  ['contacts_2edox',['contacts.dox',['../contacts_8dox.html',1,'']]],
  ['content_5ftype',['content_type',['../struct__GG112TransferInfoFile.html#a7b9c7814d28acb614167ccd41c80f504',1,'_GG112TransferInfoFile']]],
  ['conv_5fid',['conv_id',['../struct__GG110MessageAck.html#aacfaaed9d087096d3c4e2d340fc41162',1,'_GG110MessageAck::conv_id()'],['../struct__GG110RecvMessage.html#aacfaaed9d087096d3c4e2d340fc41162',1,'_GG110RecvMessage::conv_id()'],['../struct__GG110ChatInfoUpdate.html#aacfaaed9d087096d3c4e2d340fc41162',1,'_GG110ChatInfoUpdate::conv_id()'],['../struct__GG112TransferInfo.html#aacfaaed9d087096d3c4e2d340fc41162',1,'_GG112TransferInfo::conv_id()']]],
  ['copy_5fto_5flittle_5fendian_5f32',['copy_to_little_endian_32',['../protobuf-c_8c.html#a03952e0355f3c91b3a932b056fa933b0',1,'protobuf-c.c']]],
  ['copy_5fto_5flittle_5fendian_5f64',['copy_to_little_endian_64',['../protobuf-c_8c.html#af2c4c8a0245724cd74c1c7d27b94ffdf',1,'protobuf-c.c']]],
  ['count',['count',['../structgg__pubdir50__s.html#ad43c3812e6d13e0518d9f8b8f463ffcf',1,'gg_pubdir50_s::count()'],['../structgg__event__multilogon__info.html#ad43c3812e6d13e0518d9f8b8f463ffcf',1,'gg_event_multilogon_info::count()'],['../structgg__msg__recipients.html#a86988a65e0d3ece7990c032c159786d6',1,'gg_msg_recipients::count()'],['../structgg__multilogon__info.html#a86988a65e0d3ece7990c032c159786d6',1,'gg_multilogon_info::count()']]],
  ['count_5fpacked_5felements',['count_packed_elements',['../protobuf-c_8c.html#a910b5cff18d91836b4af1745f155e507',1,'protobuf-c.c']]],
  ['crc32',['crc32',['../structgg__event__image__request.html#a7ba6d986496f16e7c9bb92ea0265914d',1,'gg_event_image_request::crc32()'],['../structgg__event__image__reply.html#a7ba6d986496f16e7c9bb92ea0265914d',1,'gg_event_image_reply::crc32()'],['../structgg__image__queue.html#a7ba6d986496f16e7c9bb92ea0265914d',1,'gg_image_queue::crc32()'],['../structgg__msg__richtext__image.html#a7ba6d986496f16e7c9bb92ea0265914d',1,'gg_msg_richtext_image::crc32()'],['../structgg__msg__image__request.html#a7ba6d986496f16e7c9bb92ea0265914d',1,'gg_msg_image_request::crc32()'],['../structgg__msg__image__reply.html#a7ba6d986496f16e7c9bb92ea0265914d',1,'gg_msg_image_reply::crc32()']]],
  ['ctime',['ctime',['../structgg__file__info.html#a3c20fec01c4a9c53d9194e923f740118',1,'gg_file_info']]]
];
